<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>568</width>
    <height>457</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralWidget"/>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>568</width>
     <height>23</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFilter">
    <property name="title">
     <string>Signal Processing</string>
    </property>
    <addaction name="actionMedian_Filter"/>
    <addaction name="actionAverage_Filter"/>
    <addaction name="actionGauss_Filter"/>
    <addaction name="actionFourier_Transformation"/>
    <addaction name="actionFFT"/>
    <addaction name="actionExample"/>
   </widget>
   <addaction name="menuFilter"/>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="actionMedian_Filter">
   <property name="text">
    <string>Median Filter</string>
   </property>
  </action>
  <action name="actionAverage_Filter">
   <property name="text">
    <string>Average Filter</string>
   </property>
  </action>
  <action name="actionGauss_Filter">
   <property name="text">
    <string>Gauss Filter</string>
   </property>
  </action>
  <action name="actionFourier_Transformation">
   <property name="text">
    <string>Fourier Transformation</string>
   </property>
  </action>
  <action name="actionFFT">
   <property name="text">
    <string>FFT</string>
   </property>
  </action>
  <action name="actionExample">
   <property name="text">
    <string>Example</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
